# gpgpu_boids

./: Cargo.toml  README.md
shaders/: boids.comp  boids.comp.spv  boids_init.comp  boids_init.comp.spv  compile.sh  unlit.frag  unlit.frag.spv  unlit.vert  unlit.vert.spv
src/: camera.rs  main.rs
